<resources>
    <string name="app_name">ULApp</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="university_of_limerick_logo">University of Limerick Logo</string>
    <string name="what_type_of_user_are_you">What type of user are you?</string>
    <string name="confirm">Confirm</string>
    <string name="picture_of_user_type">Picture of User Type</string>
    <string name="sign_out">Sign Out</string>
    <string name="info_welcome">Welcome to the info page directory!\nBelow are the useful links to the information you need!</string>
    <string name="ul_logo">UL Logo</string>
    <string name="contact_info_image_button">Contact Info Image Button</string>
    <string name="guides_info_image_button">Guides Info Image Button</string>
    <string name="parking_info_image_button">Parking Info Image Button</string>
    <string-array name="user_type_array">
        <item>Student</item>
        <item>Lecturer</item>
    </string-array>
    <string-array name="pavilion_menu">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="paddocks_menu">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="maps_api_key">AIzaSyC58gIn4TIJV98x6SIFOPzxEncaZTDmvG8</string>
    <string name="title_activity_maps">map</string>
    <string name="footb">American Football</string>
    <string name="arch">Archery</string>
    <string name="athl">Athletics</string>
    <string name="badmin">Badminton</string>
    <string name="basket">Basketball</string>
    <string name="boxing">Boxing</string>
    <string name="jiujit">Brazilian Jiu Jitsu</string>
    <string name="cheerl">Cheerleading</string>
    <string name="esport">Electronic Sports</string>
    <string name="fence">Fencing </string>
    <string name="gaa">GAA</string>
    <string name="handball">Handball</string>
    <string name="kayak">Kayak</string>
    <string name="ladRug">Ladies Rugby</string>
    <string name="ladSoc">Ladies Soccer</string>
    <string name="mensRug">Mens Rugby</string>
    <string name="mensSoc">Mens Soccer</string>
    <string name="mountainB">Mountain Bike</string>
    <string name="outdoor">Outdoor Pursuits</string>
    <string name="parkour">Parkour</string>
    <string name="row">Rowing</string>
    <string name="skyD">Skydiving</string>
    <string name="socSoc">Social Soccer</string>
    <string name="subAq">Sub Aqua</string>
    <string name="surf">Surf</string>
    <string name="swim">Swim</string>
    <string name="tten">Table Tennis</string>
    <string name="taeKwon">Tae Kwon Do</string>
    <string name="tagRug">Tag Rugby</string>
    <string name="Trampo">Trampoline</string>
    <string name="ultFris">Ultimate Frisbee</string>
    <string name="windspo">Windsports</string>
    <string name="Afri">Africa</string>
    <string name="AMSI">AMSI</string>
    <string name="anime">Anime and Manga</string>
    <string name="archit">Architecture</string>
    <string name="astro">Astronomy</string>
    <string name="christ">Christian Union</string>
    <string name="comedy">Comedy</string>
    <string name="comp">Computer</string>
    <string name="craft">Crafts</string>
    <string name="cumannG">Cumann Gaelach</string>
    <string name="dance">Dance UL</string>
    <string name="drama">Drama</string>
    <string name="ec_inv">Economics and Investing</string>
    <string name="enact">Enactus Social Entrepreneurship</string>
    <string name="entre">Entrepreneurship</string>
    <string name="enviro">Environmental</string>
    <string name="fem">Feminist</string>
    <string name="film">Film</string>
    <string name="friends">Friends Médecin Sans Frontiéres</string>
    <string name="game">Games</string>
    <string name="gameD">Game Development</string>
    <string name="horse">Horse Racing</string>
    <string name="intern">International</string>
    <string name="islam">Islamic</string>
    <string name="law">Law</string>
    <string name="medical">Medical></string>
    <string name="music">Music</string>
    <string name="musThea">Musical Theatre</string>
    <string name="ograFia">Ogra Fianna Fail</string>
    <string name="Out">Out In UL</string>
    <string name="photo">Photography</string>
    <string name="racing">Racing/Motorsports</string>
    <string name="strength">Strength and Conditioning</string>
    <string name="surge">Surgical</string>
    <string name="give">UL Give</string>
    <string name="ULFM">ULFM</string>
    <string name="wistem">WiSTEM</string>
    <string name="yoga">Yoga and Meditation</string>
    <string name="fineG">Young Fine Gael</string>
    <string name="footbB">Type: Club\n\nFee: €5\n\nInfo: American Football is just a worse version of Rugby…\n\nLink:https://facebook.com/UniversityofLimerickVikings</string>
    <string name="archB">Type: Club\n\nFee: €8\n\nInfo: Archery practice is on Tuesdays and there are many social events throughout the year.\n\nLink:https://facebook.com/groups/126036219481/</string>
    <string name="athlB">Type: Club\n\nFee: €3\n\nInfo: This club offers a fantastic way to stay fit. Training is on Monday and Thursday. \n\nLink:https://facebook.com/ULAthletics</string>
    <string name="badminB">Type: Club\n\nFee: €3\n\nInfo: Badminton is a fun and social club, offering students a social sport with training on Mondays and Wednesdays,\n\nLink:https://facebook.com/ULBabmintonClub/</string>
    <string name="basketB">Type: Club\n\nFee: €5\n\nInfo: Basketball club is a fun way to stay in shape! Join now to help achieve your dreams of becoming a famous Basketball player. Practice is on Monday anb Thursday nights.\n\nLink:https://facebook.com/pages/UL-College-Basketball-Club/268574649858851</string>
    <string name="boxingB">Type: Club\n\nFee: €5\n\nInfo: Box your way to the top with UL Boxing Club!\n\nLink:https://facebook.com/ULBOXING/?ref=bookmarks</string>
    <string name="jiujitB">Type: Club\n\nFee: €10\n\nInfo: Any martial art offers valuable self defence skills that can be useful in dangerous situations. Practice on Tuesdays and Fridays\n\nLink:https://facebook.com/BJJitsuJudoClub/</string>
    <string name="cheerlB">Type: Club\n\nFee: €5\n\nInfo: Cheerleading is a fantastic way to keep university spirit high! Training is on Tuesdays and Thursdays\n\nLink:https://facebook.com/ulcheerleading</string>
    <string name="esportB">Type: Club\n\nFee: €5\n\nInfo: Esports club is a great way to meet like-minded competitive players! \n\nLink:http://www.ulesports.ie/</string>
    <string name="fenceB">Type: Club\n\nFee: €5\n\nInfo: Hone your sword skills with training every Thursday and Friday!\n\nLink:https://facebook.com/ULFencing </string>
    <string name="gaaB">Type: Club\n\nFee: €5\n\nInfo: Reignite your native passion with regular training in hurling and football.\n\nLink:http://www.ulgaa.com/</string>
    <string name="handballB">Type: Club\n\nFee: €5\n\nInfo: Enjoy some Handball with the UL wolves!.\n\nLink:https://facebook.com/UlHandballClub?fref=ts</string>
    <string name="kayakB">Type: Club\n\nFee: €5\n\nInfo: Kayaking club offers members a chance to take to sea and explore the ocean in a small plastic vessel. \n\nLink:https://www.ulkayak.com/</string>
    <string name="ladRugB">Type: Club\n\nFee: €5\n\nInfo: Ladies Rugby is a fantastic way to stay in shape with training every Monday and Wednesday.\n\nLink:https://ulwolves.ie/club/ladies-rugby</string>
    <string name="ladSocB">Type: Club\n\nFee: €5\n\nInfo: Ladies Soccer is a fantastic way to stay in shape with training every Monday and Friday.\n\nLink:https://ulwolves.ie/club/ladies-soccer</string>
    <string name="mensRugB">Type: Club\n\nFee: €5\n\nInfo: Men\'s rugby is a great and social way to get into rugby with daily training.\n\nLink:https://www.facebook.com/ulmensrugby/</string>
    <string name="mensSocB">Type: Club\n\nFee: €5\n\nInfo: Men\'s soccer is a great and social way to get into soccer with daily training.\n\nLink:https://facebook.com//groups/ULSoccerClubOfficialPage</string>
    <string name="mountainBB">Type: Club\n\nFee: €20\n\nInfo: Mountain-biking lets members tap into their adventurous side. I wonder how they obtained insurance for this club…\n\nLink:http://www.ulmountainbike.com/</string>
    <string name="outdoorB">Type: Club\n\nFee: €5\n\nInfo: Outdoor Pursuits shows members a way to get exercise in nature! Events Bi-annually.\n\nLink:https://facebook.com/ULOPC</string>
    <string name="parkourB">Type: Club\n\nFee: €5\n\nInfo: Parkour is a fun club to get people into freerunning. Training on Mondays and Thursdays.\n\nLink:https://facebook.com/ULParkour</string>
    <string name="rowB">Type: Club\n\nFee: €5\n\nInfo: Rowing is the king of sports! With a fantastic member base, rowing is one of the best ways to stay in shape.\n\nLink:https://ulrowing.net/</string>
    <string name="skyDB">Type: Club\n\nFee: €5\n\nInfo: Skydiving is a part of everyone\'s bucket list. This club gives people a chance to check one item off the list.\n\nLink:https://ulwolves.ie/club/skydive</string>
    <string name="socSocB">Type: Club\n\nFee: €5\n\nInfo: Social soccer pairs social interaction with exercise with daily training.\n\nLink:https://ulwolves.ie/club/social-soccer</string>
    <string name="subAqB">Type: Club\n\nFee: €5\n\nInfo: Sub Aqua is a terrifying club whose members explore the extreme ocean depths.\n\nLink:https://ulwolves.ie/club/sub-aqua</string>
    <string name="surfB">Type: Club\n\nFee: €5\n\nInfo: Surfing is a cool hobby with practice on Wednesdays and Fridays.\n\nLink:https://ulwolves.ie/club/surf</string>
    <string name="swimB">Type: Club\n\nFee: €5\n\nInfo: Swimming offers people a full body workout. Training is on Wednesdays and Fridays.\n\nLink:https://ulwolves.ie/club/swim</string>
    <string name="ttenB">Type: Club\n\nFee: €5\n\nInfo: Table tennis is just like regular tennis but smaller, meaning you don\'t get as tired. Training is on Mondays and Thursdays.\n\nLink:https://ulwolves.ie/club/table-tennis</string>
    <string name="taeKwonB">Type: Club\n\nFee: €5\n\nInfo: Martial arts are an important way to stay safe! Training takes place daily.\n\nLink:https://ulwolves.ie/club/tae-kwon-do</string>
    <string name="tagRugB">Type: Club\n\nFee: €5\n\nInfo: This club is aimed at tag rugby enthusiasts.\n\nLink:https://ulwolves.ie/club/tag-rugby</string>
    <string name="TrampoB">Type: Club\n\nFee: €5\n\nInfo: Trampoline society is a club that.... Jumps a lot?\n\nLink:https://ulwolves.ie/club/trampoline</string>
    <string name="ultFrisB">Type: Club\n\nFee: €5\n\nInfo: Ultimate Frisbee is a fantastic way to stay in shape and meet new friends.\n\nLink:https://ulwolves.ie/club/ultimate-frisbee</string>
    <string name="windspoB">Type: Club\n\nFee: €5\n\nInfo: Windsports is comprised of multiple wind centered sports that have multiple outings each semester\n\nLink:https://ulwolves.ie/club/windsports</string>
    <string name="AfriB">Type: Society\n\nFee: €5\n\nInfo: This society is for students that are interested in African culture\n\nLink:https://ulwolves.ie/society/africa</string>
    <string name="AMSIB">Type: Society\n\nFee: €5\n\nInfo: This society is aimed at Association of Medical Students, Ireland (AMSI) enthusiasts.\n\nLink:https://www.amsiofficial.com/</string>
    <string name="animeB">Type: Society\n\nFee: €5\n\nInfo: This society is aimed at Anime enthusiasts.\n\nLink:https://discord.gg/vQ2rvnk</string>
    <string name="architB">Type: Society\n\nFee: €5\n\nInfo: This society is aimed at Architecture enthusiasts.\n\nLink:https://facebook.com/sofaul</string>
</resources>